# meethos

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
.claude/: launch.json
.github/workflows/: ci.yml
crates/meethos-cli/: Cargo.toml
crates/meethos-cli/src/: main.rs
crates/meethos-core/: Cargo.toml
crates/meethos-core/src/: lib.rs
docs/: accuracy-audit-and-roadmap.md  architecture.md  ideas.md
earth3/: README.md  index.html  package.json  tsconfig.json  vite.config.singlefile.ts  vite.config.ts  zoom.html
earth3/src/: main.ts  styles.css  zoomMain.ts
earth3/src/core/: clock.ts  color.ts  mission.ts  regime.ts  rng.ts  units.ts
earth3/src/data/: cities.ts  constellations.ts  deepSky.ts  moons.ts  orbitals.ts  starDesig.json  starNames.ts  starlink.tle  worldCoast.ts
earth3/src/meethos/: floatingOrigin.ts  frames.ts  units.ts
earth3/src/regimes/: comets.ts  earth.ts  galaxy.ts  solar.ts  starSystem.ts  universe.ts
earth3/src/regimes/data/: exoplanets.ts  kepler.ts  planets.ts
earth3/src/render/: backdrop.ts  label.ts  pointsMaterial.ts
earth3/src/scenes/: zoomDemo.ts
earth3/src/sim/: civilization.ts
earth3/src/ui/: hud.ts
earth3/src/world/: bus.ts  constellationFigures.ts  cosmicWeb.ts  deepSky.ts  defenseGame.ts  facade.ts  faintStars.ts  galaxyMerger.ts  hipsSky.ts  ngcSky.ts  orbitalShell.ts  planetField.ts  planetSurfaces.ts  scaleManager.ts  starCatalog.ts  tleShell.ts  unifiedWorld.ts
earth3/tools/reel/: README.md  assemble.sh  frame-sink.mjs  tour.js
earth3/tools/stars/: gen-details.mjs  gen-velocities.mjs
src/: main.ts  styles.css
src/core/: clock.ts  regime.ts
src/regimes/: comets.ts  earth.ts  galaxy.ts  solar.ts  surface.ts  universe.ts
src/render/: opacity.ts  sprites.ts
src/sim/: civilization.ts
src/ui/: hud.ts
src/world/: defenseGame.ts  scaleManager.ts
