[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["macncrash"]
repository = "https://github.com/csystems-ai/meethos"
description = "meethos — a workspace for building on Mythos."

[workspace.dependencies]
# Shared dependency versions are pinned here and inherited by member crates
# via `dep = { workspace = true }`. Add common deps as the project grows.
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Release profile tuned for a shippable binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
