[package]
name = "meethos-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for meethos."

[lints]
workspace = true

[[bin]]
name = "meethos"
path = "src/main.rs"

[dependencies]
meethos-core = { path = "../meethos-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
