[package]
name = "meethos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for meethos: domain types and engine logic."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
